# cssc

./: .gitignore  .gitmodules  .x-update-copyright  COPYING  COPYING.bsd  Makefile.am  NEWS  README  README-hacking  THANKS  bootstrap  bootstrap.conf  cfg.mk  configure.ac
auxfiles/: check-testfiles.sh
build-aux/: .gitignore  Makefile.am.for_gl  codespell.line-exclusions.txt  gen-changelog.sh  shell_check.sh
docs/: Platforms  TODO  cssc.texi  gpl-3.0.texi  sccs.1  sccs.me  tests-todo.txt
gl/lib/: .gitignore
src/: Makefile.am  admin.cc  base-reader.cc  base-reader.h  body-scanner.cc  body-scanner.h  bodyio.cc  bodyio.h  canonify.cc  cap.cc  cdc.cc  cleanup.h  copyright.cc  copyright_data.inc.tmpl  copyright_data.txt  cssc-assert.h  cssc.h  defaults.h  delta-iterator.cc  delta-iterator.h  delta-table.cc  delta-table.h  delta.cc  delta.h  diff-state.cc  diff-state.h  dtbl-prepend.cc  encoding.cc  environment.cc  except.h  failure.cc  failure.h  failure_macros.h  failure_or.h  fatalsig.cc  fdclosed.cc  file.cc  file.h  filediff.cc  filediff.h  (+79 more)
tests/: run_tests.py
tests/admin/: executable.sh  hardlinks.sh  locks.sh  r-option.sh  t-option.sh  y-flag.sh
tests/admin/inputs/: foo.kw-expansion.B-only.binary  foo.kw-expansion.C-only.binary  foo.kw-expansion.F-only.binary  foo.kw-expansion.L-only.binary  foo.kw-expansion.M-only.binary  foo.kw-expansion.Q-only.binary  foo.kw-expansion.R-only.binary  foo.kw-expansion.S-only.binary  foo.kw-expansion.W-only.binary  foo.kw-expansion.WC-only.binary  foo.kw-expansion.Y-only.binary  foo.kw-expansion.Z-only.binary  foo.kw-expansion.default.binary  foo.kw-expansion.no-flags.binary  quux.initial.txt  quux.kw-expansion.A.binary  quux.kw-expansion.AM.binary  quux.kw-expansion.default.binary
tests/binary/: auto.sh  eightbit.sh  example.latin1.txt  seeking.sh
tests/bsd-sccs/: driver-basic.sh  sf595594.sh
tests/cdc/: 2comment.sh  4order.sh
tests/common/: test-common
tests/delta/: nulldelta.sh  p-option.sh
tests/get/: branch.sh  errorcases.sh  removed-delta.sh  sf479916.sh  subst.sh
tests/year-2000/: ext.sh  prs-y2k.sh
testutils/: compare_gets.sh  ekko.c  gcov-util.sh  last-time.c  lndir.c  lndir.man  realpwd.cc  seeker.c  user.c  yammer.c  yes.c
unit-tests/: Makefile.am  test_bigfile.cc  test_delta-table.cc  test_delta.cc  test_encoding.cc  test_encoding2.cc  test_failure.cc  test_linebuf.cc  test_rel_list.cc  test_release.cc  test_relvbr.cc  test_sccsdate.cc  test_sid.cc  test_sid_list.cc  test_split.cc
